duicontrolpanel (0.14.8~1) harmattan; urgency=low

  [ David Kedves ]
  * Silence the building...

 -- David Kedves <dkedves@blumsoft.eu>  Mon, 02 Jan 2012 14:39:07 +0100

duicontrolpanel (0.14.7.1) unstable; urgency=low

  [ Viktor Nagy ]
  * 284251 - COREWEB: /usr/bin/duicontrolpanel.launch -servicefw
    -outprocess QGraphicsWidget::event QApplicationPrivate::notify_helper
    QApplication::notify MApplication::notify QCoreApplication::notifyInternal

  [ Robert Manner ]
  * Fixes: NB#293910 - crash if an applet is using MDialog::exec()
  * 289899 - Multiple taps on language item results in opening
    the the language list for 'n' number of times
  * 291087 - "Tap to Select " is displayed for a while for the
    Automatic updates option
  * 292482 - "Internet connection" UI flashes back to
    "Settings" UI when it has been open again from "settings".
  * 292898 - Item title "Show notifications for:" is displayed
    in the wrong place when opening Notifications from Search
    application.

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 07 Dec 2011 10:26:53 +0100

duicontrolpanel (0.14.6) unstable; urgency=low

  * Fixes: NB#290007 - _MEEGOTOUCH_WM_INVOKED_BY/WM_TRANSIENT_FOR are
    not always set properly

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 11 Nov 2011 10:40:39 +0100

duicontrolpanel (0.14.5) unstable; urgency=low

  [ Peter Csaszar ]
  * Fixes: NB#268142 - duicontrolpanel spamming syslog at startup

  [ Robert Manner ]
  * Fixes: NB#287787 - Sounds and vibration does not open, if tapped
    immediately after opening Settings view

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 26 Oct 2011 14:07:42 +0200

duicontrolpanel (0.14.4) unstable; urgency=low

  * Fixes: NB#281450 - Launcher view is shown for a while before
    bluetooth settings gets opened

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 20 Oct 2011 09:20:17 +0200

duicontrolpanel (0.14.3.1) unstable; urgency=low

  [ Viktor Nagy ]