@@ -2,6 +2,11 @@ duicontrolpanel (0.14.8~1) harmattan; urgency=low
 
   [ David Kedves ]
   * Silence the building...
+  
+  [ Laszlo Pere ]
+  * Fixes: NB#294517 - All the “>" buttons and switch button jump right when 
+    launching the ‘Settings‘ application.
+  * Fixes: NB#295020 - Weak startuptime of controlpanel, w50
 
  -- David Kedves <dkedves@blumsoft.eu>  Mon, 02 Jan 2012 14:39:07 +0100
 
